app/assets/stylesheets/scss/index.sass
.sort
  font-size: 12px
  margin-bottom: 10px
  border-bottom: 1px solid #ddd
  padding: 5px 0
  a
    margin-right: 5px
    color: #aaa
    &.selected
      color: #222

.votes
  .vote
    text-align: center
    float: left
  float: left
  color: #bbb
  width: 5%
  font-size: 32px
  .count
    margin: 10px 0

.sent-by
  float: right
  width: 18%

.sent-info
  float: right
  img.photo
    border: 5px solid #eee
    display: block
    float: left
    margin-right: 5px
  .user
    margin-bottom: 5px
  .thumbs
    font-size: 12px
    color: #090
  .sends
    b
      font-family: Helvetica
    em
      color: lighten(#f35, 10%)
    font-size: 12px
    font-family: 'Montserrat Alternates', Helvetica, cursive

.video
  margin-bottom: 20px

.video-block
  float: left
  width: 77%
  background: url(/images/ytbg.png) #ebebeb repeat
  font-style: normal
  font-weight: normal
  font-family: arial, sans-serif
  font-size: 13px
  padding: 10px

a.video-title
  font-family: arial, sans-serif
  font-size: 22px
  font-weight: bold
  line-height: 25px
  color: rgb(51, 51, 51) !important
  display: block

.video-image
  width: 15%
  float: left
  img
    border: 5px solid #ddd
    display: block
    margin: 10px auto
    max-width: 90%

.video-comments
  width: 85%
  float: left

.comments-header
  margin: 5px 0
  border-bottom: 1px solid #ccc
  color: #666
  line-height: 1.9231em

.comment
  margin-top: 15px
  margin-left: 10px
  line-height: 12px
  padding: 5px
  color: rgb(51, 51, 51)
  &:first-child
    background: #f5f5f5

.comment-data
  font-size: 11px
  .user
    color: rgb(28, 98, 185)
  .date
    padding-left: .75em
  .thumbs
    padding-left: .75em
    color: #090
    img
      vertical-align: bottom

